--- a/student-management-backend/src/main/resources/application.properties
+++ b/student-management-backend/src/main/resources/application.properties
@@ -1,12 +1,14 @@
+
 # Application Configuration
 spring.application.name=Student Management System
-# Server Configuration
-server.port=8080
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/student_management?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+# Server Configuration (Railway automatically PORT set karta hai)
+server.port=${PORT:8080}
+
+# MySQL Database Configuration - Railway Variables
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:student_management}
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:HABZxSBXGcoBCRzFeiANQVZzkhGLPOmj}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -14,8 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
-
 
 # Error Handling
 server.error.include-message=always
